--- a/modules/channel-web/assets/examples/embedded-webchat.html
+++ b/modules/channel-web/assets/examples/embedded-webchat.html
@@ -69,9 +69,9 @@
         botId: botId,
         lazySocket: false
         /*
-        To change the styling of the webchat, you can either edit directly default.css, or use the extraStylesheet property.
-        This allows you to customize the chat on a per-bot basis.
-      */
+      To change the styling of the webchat, you can either edit directly default.css, or use the extraStylesheet property.
+      This allows you to customize the chat on a per-bot basis.
+    */
         //extraStylesheet: 'assets/modules/channel-web/examples/my-theme.css'
       }
 
@@ -189,6 +189,13 @@
           if (message.data.name === 'webchatOpened') {
             webchatOpen = true
             document.getElementById('toggle-bp').style.backgroundColor = 'blue'
+            window.botpressWebChat.sendEvent({
+              type: 'proactive-trigger',
+              channel: 'web',
+              payload: {
+                text: 'fake message'
+              }
+            })
           }
 
           if (message.data.name === 'webchatClosed') {
